k8s/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - host: my-app.ibt
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: my-app-service
                port:
                  number: 3000
